--- a/_pages/research.html
+++ b/_pages/research.html
@@ -5,8 +5,14 @@ permalink: /research/
 author_profile: true
 ---
 
-{% include base_path %}
+### Physics-Informed Digital Twin-Enhanced Reinforcement Learning in Mixed-Fleet Mobility-on-Demand Systems
 
-{% for post in site.teaching reversed %}
-  {% include archive-single.html %}
-{% endfor %}
+<div class="container">
+  <div class="image">
+    <img src="https://520yrn.github.io//files/1.png" alt="Photo" style="max-width:300px;"/>
+  </div>
+  <div class="text">
+    <h2>Research Title</h2>
+    <p>Research description goes here.</p>
+  </div>
+</div>
