--- a/_pages/research.html
+++ b/_pages/research.html
@@ -13,6 +13,6 @@ author_profile: true
   </div>
   <div class="text">
     <h2>Research Title</h2>
-    <p>Research description goes here.</p>
+    <p>Developed a model-free reinforcement learning method for vehicle rebalancing in mixed-autonomy mobility-on-demand systems that integrated a physics-informed digital twin to improve sample efficiency, which resulted in a research paper under review in Transportation Research Part C</p>
   </div>
 </div>
