--- a/_pages/research.html
+++ b/_pages/research.html
@@ -4,15 +4,35 @@ title: "Research"
 permalink: /research/
 author_profile: true
 ---
-
-### Physics-Informed Digital Twin-Enhanced Reinforcement Learning in Mixed-Fleet Mobility-on-Demand Systems
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+  .container {
+    display: flex;
+  }
+  .item {
+    flex: 1;
+    padding: 20px;
+    text-align: center;
+  }
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+</style>
+</head>
+<body>
 
 <div class="container">
-  <div class="image">
+  <div class="item">
     <img src="https://520yrn.github.io//files/1.png" alt="Photo" style="max-width:300px;"/>
   </div>
-  <div class="text">
-    <h2>Research Title</h2>
+  <div class="item">
+    <h2>Physics-Informed Digital Twin-Enhanced Reinforcement Learning in Mixed-Fleet Mobility-on-Demand Systems</h2>
     <p>Developed a model-free reinforcement learning method for vehicle rebalancing in mixed-autonomy mobility-on-demand systems that integrated a physics-informed digital twin to improve sample efficiency, which resulted in a research paper under review in Transportation Research Part C</p>
   </div>
 </div>
+
+</body>
+</html>
