--- a/_pages/research.html
+++ b/_pages/research.html
@@ -10,26 +10,32 @@ author_profile: true
 <style>
   .container {
     display: flex;
+    align-items: center;
   }
-  .item {
+  .image-container {
     flex: 1;
-    padding: 20px;
-    text-align: center;
+    display: flex;
+    justify-content: flex-end;
   }
-  img {
+  .image-container img {
     max-width: 100%;
     height: auto;
+  }
+  .text-container {
+    flex: 1;
+    text-align: left;
   }
 </style>
 </head>
 <body>
 
 <div class="container">
-  <div class="item">
+  <div class="image-container">
     <img src="https://520yrn.github.io//files/1.png" alt="Photo" style="max-width:300px;"/>
   </div>
-  <div class="item">
+  <div class="text-container">
     <h2>Physics-Informed Digital Twin-Enhanced Reinforcement Learning in Mixed-Fleet Mobility-on-Demand Systems</h2>
+    <h4><b>Ruining Yang</b>, Longhao Yan, Advisor: Dr. Kaidi Yang</h4> 
     <p>Developed a model-free reinforcement learning method for vehicle rebalancing in mixed-autonomy mobility-on-demand systems that integrated a physics-informed digital twin to improve sample efficiency, which resulted in a research paper under review in Transportation Research Part C</p>
   </div>
 </div>
