--- a/_pages/research.html
+++ b/_pages/research.html
@@ -15,6 +15,7 @@ author_profile: true
   .image-container {
     flex: 1;
     display: flex;
+    float: left;
     justify-content: flex-end;
   }
   .image-container img {
@@ -22,7 +23,7 @@ author_profile: true
     height: auto;
   }
   .text-container {
-    flex: 1;
+    flex: 2;
     text-align: left;
   }
 </style>
@@ -31,7 +32,7 @@ author_profile: true
 
 <div class="container">
   <div class="image-container">
-    <img src="https://520yrn.github.io//files/1.png" alt="Photo" style="max-width:300px;"/>
+    <img src="https://520yrn.github.io//files/1.png" alt="Photo" style="max-width:300px;height:200px;"/>
   </div>
   <div class="text-container">
     <h2>Physics-Informed Digital Twin-Enhanced Reinforcement Learning in Mixed-Fleet Mobility-on-Demand Systems</h2>
