--- a/_pages/research.html
+++ b/_pages/research.html
@@ -36,7 +36,8 @@ author_profile: true
   </div>
   <div class="text-container">
     <h2>Physics-Informed Digital Twin-Enhanced Reinforcement Learning in Mixed-Fleet Mobility-on-Demand Systems</h2>
-    <h4><b>Ruining Yang</b>, Longhao Yan, Advisor: Dr. Kaidi Yang</h4> 
+    <p><b>Ruining Yang</b>, Longhao Yan, Advisor: Dr. Kaidi Yang*</p> 
+    
     <p>Developed a model-free reinforcement learning method for vehicle rebalancing in mixed-autonomy mobility-on-demand systems that integrated a physics-informed digital twin to improve sample efficiency, which resulted in a research paper under review in Transportation Research Part C</p>
   </div>
 </div>
