--- a/_pages/research.html
+++ b/_pages/research.html
@@ -14,9 +14,8 @@ author_profile: true
   }
   .image-container {
     flex: 1;
-    display: flex;
     float: left;
-    justify-content: flex-end;
+    padding-right: 20px;
   }
   .image-container img {
     max-width: 100%;
