--- a/_pages/research.html
+++ b/_pages/research.html
@@ -31,12 +31,13 @@ author_profile: true
 
 <div class="container">
   <div class="image-container">
-    <img src="https://520yrn.github.io//files/1.png" alt="Photo" style="max-width:350px;height:300px;"/>
+    <img src="https://520yrn.github.io//files/1.png" alt="Photo" style="max-width:350px;height:280px;"/>
   </div>
   <div class="text-container">
     <h2>Physics-Informed Digital Twin-Enhanced Reinforcement Learning in Mixed-Fleet Mobility-on-Demand Systems</h2>
     <p><b>Ruining Yang</b>, Longhao Yan, Advisor: Dr. Kaidi Yang*</p>
-    <p>Developed a model-free reinforcement learning method for vehicle rebalancing in mixed-autonomy mobility-on-demand systems that integrated a physics-informed digital twin to improve sample efficiency, which resulted in a research paper under review in Transportation Research Part C</p>
+    <p>Developed a model-free reinforcement learning method for vehicle rebalancing in mixed-autonomy mobility-on-demand systems that integrated a physics-informed digital twin to improve sample efficiency.
+      This research has resulted in a research paper under review in Transportation Research Part C</p>
   </div>
 </div>
 
