--- a/_pages/research.html
+++ b/_pages/research.html
@@ -41,5 +41,26 @@ author_profile: true
   </div>
 </div>
 
+<div class="container">
+  <div class="image-container">
+    <img src="https://520yrn.github.io//files/2.png" alt="Photo" style="max-width:350px;height:280px;"/>
+  </div>
+  <div class="text-container">
+    <h2>Congestion-aware Reinforcement Learning in Autonomous Mobility-on-Demand Systems</h2>
+    <p><b>Ruining Yang</b>, Guoyao Yang, Kaidi Yang*
+    <p>Developing a congestion-aware reinforcement learning-based algorithm for vehicle rebalancing in autonomous mobility-on-demand systems where congestion is reflected by a link transmission model.</p>
+  </div>
+</div>
+  
+<div class="container">
+  <div class="image-container">
+    <img src="https://520yrn.github.io//files/4.png" alt="Photo" style="max-width:350px;height:280px;"/>
+  </div>
+  <div class="text-container">
+    <h2>Privacy-Concerned Trajectory Generation Using Differential Privacy Generative Adversarial Network</h2>
+    <p><b>Ruining Yang</b>, Qiqing Wang, Kaidi Yang*
+    <p>Developed a novel presentation of trajectories and generated trajectory datasets using differential privacy generative adversarial network </p>
+  </div>
+</div>
 </body>
 </html>
