--- a/_pages/research.html
+++ b/_pages/research.html
@@ -46,9 +46,12 @@ author_profile: true
     <img src="https://520yrn.github.io//files/2.png" alt="Photo" style="max-width:350px;height:280px;"/>
   </div>
   <div class="text-container">
-    <h2>Congestion-aware Reinforcement Learning in Autonomous Mobility-on-Demand Systems</h2>
-    <p><b>Ruining Yang</b>, Guoyao Yang, Kaidi Yang*
-    <p>Developing a congestion-aware reinforcement learning-based algorithm for vehicle rebalancing in autonomous mobility-on-demand systems where congestion is reflected by a link transmission model.</p>
+    <h2>Reliable Real-Time Evacuation Using Uncertainty-Informed Model Predictive Control</h2>
+    <p><b>Ruining Yang</b>, Kaidi Yang*
+    <p>Developing an online vehicle rerouting algorithm for real-time evacuation under adverse weather conditions
+based on uncertainty-informed model predictive control that leverages conform prediction to quantify 
+uncertainty.
+</p>
   </div>
 </div>
   
