--- a/_pages/research.html
+++ b/_pages/research.html
@@ -62,7 +62,7 @@ uncertainty.
   <div class="text-container">
     <h2>Privacy-Concerned Trajectory Generation Using Differential Privacy Generative Adversarial Network</h2>
     <p><b>Ruining Yang</b>, Qiqing Wang, Kaidi Yang*
-    <p>Developed a novel presentation of trajectories and generated trajectory datasets using differential privacy generative adversarial network </p>
+    <p>Developed a novel presentation of trajectories which are further clustered based on distances and generated using differential privacy generative adversarial network </p>
   </div>
 </div>
 </body>
