--- a/_pages/research.html
+++ b/_pages/research.html
@@ -65,5 +65,18 @@ uncertainty.
     <p>Developed a novel presentation of trajectories which are further clustered based on distances and generated using differential privacy generative adversarial network </p>
   </div>
 </div>
+
+  <div class="container">
+  <div class="image-container">
+    <img src="https://520yrn.github.io//files/5.png" alt="Photo" style="max-width:350px;height:240px;"/>
+  </div>
+  <div class="text-container">
+    <h2>Risk Evaluation and Protection of Overtaking based on Simulated Driving Experiment</h2>
+    <p><b>Advisor: Yongjun Shen</b>
+    <p>Conducted state preference survey to evaluate human drivers’ subjective aggressiveness during overtaking and developed regression models to evaluate human drivers’ objective aggressiveness during overtaking based on 
+data collected from simulated driving experiments.
+    This program has been selected as the Jiangsu Provincial-level undergraduate research program</p>
+  </div>
+</div>
 </body>
 </html>
