--- a/_pages/research.html
+++ b/_pages/research.html
@@ -35,7 +35,7 @@ author_profile: true
   </div>
   <div class="text-container">
     <h2>Physics-Informed Digital Twin-Enhanced Reinforcement Learning in Mixed-Fleet Mobility-on-Demand Systems</h2>
-    <p><b>Advisor: Kaidi Yang</b>
+    <p><b>Advisor: Dr. Kaidi Yang in the Dept. of Civil & Environmental Engineering at National University of Singapore</b>
     <p>Developed a model-free reinforcement learning method for vehicle rebalancing in mixed-autonomy mobility-on-demand systems that integrated a physics-informed digital twin to improve sample efficiency.
       This research has resulted in a research paper under review in Transportation Research Part C</p>
   </div>
@@ -47,7 +47,7 @@ author_profile: true
   </div>
   <div class="text-container">
     <h2>Reliable Real-Time Evacuation Using Uncertainty-Informed Model Predictive Control</h2>
-    <p><b>Advisor: Kaidi Yang</b>
+    <p><b>Advisor: Dr. Kaidi Yang in the Dept. of Civil & Environmental Engineering at National University of Singapore</b>
     <p>Developing an online vehicle rerouting algorithm for real-time evacuation under adverse weather conditions
 based on uncertainty-informed model predictive control that leverages conform prediction to quantify 
 uncertainty.
@@ -61,7 +61,7 @@ uncertainty.
   </div>
   <div class="text-container">
     <h2>Privacy-Concerned Trajectory Generation Using Differential Privacy Generative Adversarial Network</h2>
-    <p><b>Advisor: Kaidi Yang</b>
+    <p><b>Advisor: Dr. Kaidi Yang in the Dept. of Civil & Environmental Engineering at National University of Singapore</b>
     <p>Developed a novel presentation of trajectories which are further clustered based on distances and generated using differential privacy generative adversarial network </p>
   </div>
 </div>
@@ -72,7 +72,7 @@ uncertainty.
   </div>
   <div class="text-container">
     <h2>Risk Evaluation and Protection of Overtaking based on Simulated Driving Experiment</h2>
-    <p><b>Advisor: Yongjun Shen</b>
+    <p><b>Advisor: Prof. Yongjun Shen in the Dept. of Transportation Engineering at Southeast University</b>
     <p>Conducted state preference survey to evaluate human drivers’ subjective aggressiveness during overtaking and developed regression models to evaluate human drivers’ objective aggressiveness during overtaking based on 
 data collected from simulated driving experiments.
     This program has been selected as the Jiangsu Provincial-level undergraduate research program</p>
