--- a/_pages/research.html
+++ b/_pages/research.html
@@ -54,7 +54,19 @@ uncertainty.
 </p>
   </div>
 </div>
-  
+
+<div class="container">
+  <div class="image-container">
+    <img src="https://520yrn.github.io//files/3.png" alt="Photo" style="max-width:350px;height:240px;"/>
+  </div>
+  <div class="text-container">
+    <h2>Congestion-aware Reinforcement Learning in Autonomous Mobility-on-Demand Systems</h2>
+    <p><b>Advisor: Dr. Kaidi Yang in the Dept. of Civil & Environmental Engineering at National University of Singapore</b>
+    <p> Developing a congestion-aware reinforcement learning-based algorithm for vehicle rebalancing in 
+autonomous mobility-on-demand systems where congestion is reflected by a link transmission model. </p>
+  </div>
+</div>
+
 <div class="container">
   <div class="image-container">
     <img src="https://520yrn.github.io//files/4.png" alt="Photo" style="max-width:350px;height:240px;"/>
