--- a/_pages/research.html
+++ b/_pages/research.html
@@ -90,5 +90,18 @@ data collected from simulated driving experiments.
     This program has been selected as the Jiangsu Provincial-level undergraduate research program</p>
   </div>
 </div>
+
+  <div class="container">
+  <div class="image-container">
+    <img src="https://520yrn.github.io//files/6.png" alt="Photo" style="max-width:350px;height:240px;"/>
+  </div>
+  <div class="text-container">
+    <h2>Antenna Array Optimization based on Heuristic Algorithms</h2>
+    <p><b>Advisor: Dr. ZhongJin Jiang in the Dept. of Information Science and Engineering at Southeast University</b>
+    <p>Developed a particle swarm optimization algorithm to efficiently optimize antenna array performance where 
+fitness function is specially designed and various simulation environments (i.e., diverse signals) to evaluate the algorithm effect.
+</p>
+  </div>
+</div>
 </body>
 </html>
